--- a/assets/partials/header.html
+++ b/assets/partials/header.html
@@ -1,11 +1,22 @@
 <header class="site-header">
-  <div class="logo">Phantom Picks</div>
+  <div class="logo-container">
+    <img src="assets/img/Phantom_Picks_Logo.png" alt="Phantom Picks Logo" class="site-logo">
+  </div>
   <nav>
     <a href="index.html">Home</a>
+    <span class="divider"></span>
     <a href="mlb.html">MLB</a>
+    <span class="divider"></span>
     <a href="nfl.html">NFL</a>
+    <span class="divider"></span>
     <a href="sec.html">SEC</a>
+    <span class="divider"></span>
     <a href="leaderboard.html">Leaderboard</a>
+    <span class="divider"></span>
+    <div class="wallet">
+      Balance: <span id="wallet-balance">$50</span>
+    </div>
+    <span class="divider"></span>
     <a href="auth.html">Login</a>
   </nav>
 </header>
