--- a/assets/partials/header.html
+++ b/assets/partials/header.html
@@ -1,6 +1,7 @@
 <header class="site-header">
   <div class="logo-container">
     <img src="assets/img/Phantom_Picks_Logo.png" alt="Phantom Picks Logo" class="site-logo">
+    <span class="logo-text">Phantom Picks</span>
   </div>
   <nav>
     <a href="index.html">Home</a>
